--- a/app/sass/layout/_header.scss
+++ b/app/sass/layout/_header.scss
@@ -1,28 +1,39 @@
 .header {
   width: 100%;
-  height: 100px;
+  height: 60px;
   background: #0a1c20;
+
+  @include media('medium') {
+    height: 100px;
+  }
 
   h1 {
     position: relative;
-    width: 100px;
-    height: 57px;
-    top: 20px;
+    width: 60px;
+    height: 34px;
+    top: 13px;
     margin: 0 auto;
-    //background: url('../assets/logo.png') no-repeat;
+    background: url('/assets/images/logo.png') no-repeat;
     background-size: 100%;
+
+    @include media('medium') {
+      width: 100px;
+      height: 57px;
+      top: 20px;
+    }
 
     &.home {
       top: 140px;
-      width: 400px !important;
-      height: 228px !important;
+      width: 400px;
+      height: 228px;
+      transition: all, 2s, linear;
     }
+  }
 
-    a {
-      display: block;
-      width: 100%;
-      height: 100%;
-      text-indent: -99999px;
-    }
+  a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-indent: -9999px;
   }
 }
