--- a/app/sass/layout/_menu.scss
+++ b/app/sass/layout/_menu.scss
@@ -1,30 +1,60 @@
-.menu {
+.nav {
   position: absolute;
-  width: auto;
+  width: 100%;
   height: 100%;
-  z-index: 6;
-  top: 15%;
-  left: 80px;
+  z-index: 9999;
+  top: 60px;
+  left: 100%;
   color: #fff;
+  background: #0a1e23;
+  font-weight: 200;
+  transition: all, 0.5s, ease-in-out;
+
+  @include media('medium') {
+    width: auto;
+    z-index: 6;
+    top: 15%;
+    left: 80px;
+    background:none;
+  }
+
+  &--is-open {
+    left: 0;
+
+    @include media('medium') {
+      left: 80px;
+    }
+  }
 
   ul {
-    li {
-      font-size: 12px;
-      cursor: pointer;
-      width: auto;
-      position: relative;
-      margin-bottom: 20px;
+    position: relative;
+    top: 50px;
+
+    @include media('medium') {
       top: 100px;
-      a {
-        padding: 10px;
-        text-align: center;
-        display: block;
-        color: #fff;
-        text-decoration: none;
-        &:hover {
-          color: #efefef;
-          background: #08191d;
-        }
+    }
+  }
+
+  li {
+    font-size: rem(12px);
+    margin: 10px 0;
+  }
+
+  a {
+    padding: 10px;
+    text-align: center;
+    display: block;
+    color: #fff;
+    text-decoration: none;
+
+    &:hover {
+      color: #efefef;
+      background: #08191d;
+      border-radius: rem(40px);
+
+      @include media('medium') {
+        top: 100px;
+        border-radius: 0;
       }
     }
   }
