--- a/app/sass/layout/default.scss
+++ b/app/sass/layout/default.scss
@@ -2,9 +2,10 @@ body, html {
   width: 100%;
   height: 100%;
   background: #0a1e23;
-  background: url('/images/bg-lines.png') #0a1e23;
+  background: url('/assets/images/bg-lines.png') #0a1e23;
   background-repeat: repeat;
   overflow: hidden !important;
+  font-family: 'Gotham', sans-serif;
 }
 
 .main {
@@ -16,20 +17,34 @@ body, html {
   width: 100%;
   top: 50%;
   height: 3000px;
-  background: url('/images/bg-water.png') no-repeat;
+  background: url('/assets/images/bg-water.png') no-repeat;
   background-size: 100%;
+  transition: all 2s ease;
+  animation: 2s waterAnimation linear infinite;
+}
+
+@include keyframes(waterAnimation) {
+  0% { background-position: 0 0; }
+  50% { background-position: 0 10px; }
+  100% { background-position: 0 0; }
 }
 
 .ruler {
   position: absolute;
   height: 81%;
   width: 30px;
-  top: 120px;
-  left: 40px;
-  background: url('/images/ruler.png');
+  top: 70px;
+  left: 20px;
+  background: url('/assets/images/ruler.png');
   background-size: cover;
+
+  @include media('medium') {
+    top: 120px;
+    left: 40px;
+  }
 }
 
+// Instructions when no dam is selected
 .instructions {
   z-index: 9;
   width: 70%;
@@ -38,17 +53,20 @@ body, html {
   color: #fff;
   text-align: center;
   opacity: 0;
+  transition: all 1s linear;
 
-  &.show {
+  &--is-visible {
     margin-top: 140px;
     opacity: 1;
   }
 
   h3 {
-    font-size: 35px;
+    font-size: rem(35px);
+    font-weight: 100;
   }
 }
 
+// Dam content
 .content {
   position: relative;
   z-index: 9;
@@ -58,18 +76,20 @@ body, html {
   display: none;
   text-align: center;
 
-  &.show {
+  &--is-visible {
     display: block;
   }
 
   h3 {
     margin-left: -70px;
     font-size: 35px;
+    font-weight: 100;
   }
 
   h2 {
     margin-top: -10px;
     font-size: 55px;
+    font-weight: bold;
   }
 
   .indicator {
@@ -77,18 +97,21 @@ body, html {
     width: 397px;
     height: 460px;
     margin: 0 auto;
-    background: url('/images/indicator.png') no-repeat;
+    background: url('/assets/images/indicator.png') no-repeat;
     text-align: center;
     z-index: 5;
+    animation: 2.5s waterAnimation linear infinite 2s;
 
     .pct {
       position: relative;
       top: 140px;
       font-size: 150px;
       letter-spacing: -12px;
+      font-weight: bold;
 
       strong {
         font-size: 80px;
+        font-weight: bold;
       }
     }
   }
