--- a/app/sass/base/_helpers.scss
+++ b/app/sass/base/_helpers.scss
@@ -17,3 +17,23 @@
   @extend %fade-out;
   transition: opacity 1s ease-in-out 1s;
 }
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
+main {
+  /* start 'enter' transition */
+  &.ng-enter {
+    /* transition on enter for .5s */
+    transition: .5s;
+    /* start with opacity 0 (invisible) */
+    opacity: 0;
+  }
+
+  /* end 'enter' transition */
+  &.ng-enter-active {
+    /* end with opacity 1 (fade in) */
+    opacity: 1;
+  }
+}
