--- a/app/sass/layout/_menu.scss
+++ b/app/sass/layout/_menu.scss
@@ -12,7 +12,7 @@
 
   @include media('medium') {
     width: auto;
-    z-index: 6;
+    z-index: 10;
     top: 15%;
     left: 80px;
     background:none;
@@ -36,6 +36,7 @@
   }
 
   li {
+    position: relative;
     font-size: rem(12px);
     margin: 10px 0;
   }
@@ -47,7 +48,7 @@
     color: #fff;
     text-decoration: none;
 
-    &:hover {
+    &:hover, &.is-active  {
       color: #efefef;
       background: #08191d;
       border-radius: rem(40px);
