--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,14 +9,14 @@
         <meta property="og:title" content="{{ site.name }}" />
         <meta property="og:type" content="article" />
         <meta property="og:url" content="{{ site.author }}" />
-        <meta property="og:image" content="{{ site.author }}/assets/images/facebook.png" />
+        <meta property="og:image" content="{{ site.url }}/public/assets/images/facebook.png" />
         <meta name="author" content="{{ site.author }}" />
         <meta name="keywords" content="{{ site.keywords }}" />
 
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="{{ site.url }}/public/css/main.css">
     </head>
     <body>
         <app></app>
-        <script src="bundle.js"></script>
+        <script src="{{ site.url }}/public/bundle.js"></script>
     </body>
 </html>
