--- a/src/index.css
+++ b/src/index.css
@@ -1,70 +1,68 @@
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
+/* FONTS */
+@font-face {
+  font-family: 'Gotham';
+  src: url('/assets/fonts/gotham-thin.woff2') format('woff2'),
+    url('/assets/fonts/gotham-thin.woff') format('woff');
+  font-weight: 100;
+}
+
+@font-face {
+  font-family: 'Gotham';
+  src: url('/assets/fonts/gotham-light.woff2') format('woff2'),
+    url('/assets/fonts/gotham-light.woff') format('woff');
+  font-weight: 200;
+}
+
+@font-face {
+  font-family: 'Gotham';
+  src: url('/assets/fonts/gotham-book.woff2') format('woff2'),
+    url('/assets/fonts/gotham-book.woff') format('woff');
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+@font-face {
+  font-family: 'Gotham';
+  src: url('/assets/fonts/gotham-bold.woff2') format('woff2'),
+    url('/assets/fonts/gotham-bold.woff') format('woff');
+  font-weight: 700;
 }
 
-body {
+
+/* VARIABLES */
+:root {
+  /* color-scheme: light dark; */
+  /* color: rgba(255, 255, 255, 0.87); */
+  /* background-color: #242424; */
+
+  /* font-synthesis: none; */
+  /* text-rendering: optimizeLegibility; */
+  /* -webkit-font-smoothing: antialiased; */
+  /* -moz-osx-font-smoothing: grayscale; */
+  /* -webkit-text-size-adjust: 100%; */
+
+  /* colors */
+  /* --primary-color: #5e60ba; */
+  /* --accent-color: #1de9b6; */
+
+  /* --dark-bg-color: #263238; */
+  /* --light-bg-color: #37474f; */
+  /* --light-text-color: #f5f5f5; */
+  /* --dark-text-color: #212121; */
+
+  --bg-color: #0a1e23;
+  --blue-cyan: #3498db;
+  --font-color: #333d47;
+}
+
+body,
+html {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--bg-color);
+  background-image: url("/assets/images/bg-lines.png");
+  background-repeat: repeat;
+  font-family: 'Gotham', sans-serif;
+  overflow: hidden;
 }
